litehtml-sys/csrc/litehtml_c.h

/* --------------------------------------------------------------------------
 * Simple C structs (value types, passed across FFI by value or pointer)
 * -------------------------------------------------------------------------- */

typedef struct lh_position {
    float x;
    float y;
    float width;
    float height;
} lh_position_t;
/* --------------------------------------------------------------------------
 * Opaque types (pointers to C++ objects, never dereferenced from C)
 * -------------------------------------------------------------------------- */

typedef struct lh_document           lh_document_t;
/* Element handle -- borrowed pointer, valid while the parent document is alive */
typedef struct lh_element lh_element_t;
float lh_document_render(lh_document_t* doc, float max_width);
void  lh_document_draw(lh_document_t* doc,
                        uintptr_t hdc,
                        float x,
                        float y,
                        const lh_position_t* clip);
float lh_document_width(const lh_document_t* doc);
float lh_document_height(const lh_document_t* doc);
/* Add and immediately apply a CSS stylesheet to the document.
   Requires a subsequent render() to update layout. */
void lh_document_add_stylesheet(lh_document_t* doc,
                                const char* css_text,
                                const char* baseurl,
                                const char* media);
/* Get the root element of the document. Returns NULL if doc is NULL. */
lh_element_t* lh_document_root(lh_document_t* doc);
/* --------------------------------------------------------------------------
 * Element introspection
 * -------------------------------------------------------------------------- */

/* Get the parent element. Returns NULL for root or if el is NULL. */
lh_element_t* lh_element_parent(lh_element_t* el);
/* Number of child elements. Returns 0 if el is NULL. */
int lh_element_children_count(lh_element_t* el);
/* Get the child at the given index. Returns NULL if out of bounds. */
lh_element_t* lh_element_child_at(lh_element_t* el, int index);
/* Returns non-zero if the element is a text node. */
int lh_element_is_text(lh_element_t* el);
/* Get the font handle from the element's computed CSS. Returns 0 on error. */
uintptr_t lh_element_get_font(lh_element_t* el);
/* Get the font size from the element's computed CSS. Returns 0.0 on error. */
float lh_element_get_font_size(lh_element_t* el);
/* Get the element's absolute pixel bounding box after layout. */
void lh_element_get_placement(lh_element_t* el, lh_position_t* pos);
/* Get the element's recursive text content via callback. */
void lh_element_get_text(lh_element_t* el,
                         void (*cb)(void* ctx, const char* text),
                         void* ctx);
/* Get the element's tag name (e.g. "a", "div"; empty for text nodes) via
 * callback. The string is only valid for the duration of the callback. */
void lh_element_get_tag_name(lh_element_t* el,
                             void (*cb)(void* ctx, const char* name),
                             void* ctx);
/* Get the value of the attribute `name` via callback. Returns 1 and calls
 * `cb` if the element has the attribute (an empty value counts), 0 otherwise.
 * The string is only valid for the duration of the callback. */
int lh_element_get_attr(lh_element_t* el, const char* name,
                        void (*cb)(void* ctx, const char* value),
                        void* ctx);
/* Hit testing: find the deepest element at document coordinates (x, y). */
lh_element_t* lh_document_get_element_by_point(lh_document_t* doc,
                                                float x, float y,
                                                float client_x, float client_y);
/* Number of per-line inline boxes for a rendered element (0 if not inline). */
int lh_element_get_inline_boxes_count(lh_element_t* el);
/* Get the i-th inline box in absolute document coordinates. */
void lh_element_get_inline_box_at(lh_element_t* el, int index, lh_position_t* pos);
/* Get all inline boxes in one call via callback. Avoids recomputing boxes N+1 times.
   The callback receives each box in absolute document coordinates plus a user context. */
typedef void (*lh_inline_box_callback)(const lh_position_t* pos, void* ctx);
void lh_element_get_inline_boxes(lh_element_t* el, lh_inline_box_callback cb, void* ctx);
/* Find the first descendant matching a CSS selector (e.g. "#id", "[name=foo]").
   Returns NULL if no match or if el/selector is NULL. */
lh_element_t* lh_element_select_one(lh_element_t* el, const char* selector);
/* Get the computed text-align value (0=left, 1=right, 2=center, 3=justify). */
int lh_element_get_text_align(lh_element_t* el);
/* Get the computed line-height in pixels. */
float lh_element_get_line_height(lh_element_t* el);
/* Parse an HTML fragment and append the resulting elements as children of parent.
   If replace_existing is non-zero, existing children are removed first.
   Requires a subsequent render() to update layout. */
void lh_document_append_children_from_string(lh_document_t* doc,
                                              lh_element_t* parent,
                                              const char* html,
                                              int replace_existing);
/* --------------------------------------------------------------------------
 * Mouse / interaction
 * -------------------------------------------------------------------------- */

int lh_document_on_mouse_over(lh_document_t* doc,
                               float x, float y,
                               float client_x, float client_y);
int lh_document_on_lbutton_down(lh_document_t* doc,
                                 float x, float y,
                                 float client_x, float client_y);
int lh_document_on_lbutton_up(lh_document_t* doc,
                               float x, float y,
                               float client_x, float client_y);
int lh_document_on_mouse_leave(lh_document_t* doc);
int lh_document_media_changed(lh_document_t* doc);