litehtml-sys/src/bindings.rs

unsafe extern "C" {
    pub fn lh_document_render(doc: *mut lh_document_t, max_width: f32) -> f32;
}
unsafe extern "C" {
    pub fn lh_document_draw(
        doc: *mut lh_document_t,
        hdc: usize,
        x: f32,
        y: f32,
        clip: *const lh_position_t,
    );
}
unsafe extern "C" {
    pub fn lh_document_width(doc: *const lh_document_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_document_height(doc: *const lh_document_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_document_add_stylesheet(
        doc: *mut lh_document_t,
        css_text: *const ::std::os::raw::c_char,
        baseurl: *const ::std::os::raw::c_char,
        media: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn lh_document_root(doc: *mut lh_document_t) -> *mut lh_element_t;
}
unsafe extern "C" {
    pub fn lh_element_parent(el: *mut lh_element_t) -> *mut lh_element_t;
}
unsafe extern "C" {
    pub fn lh_element_children_count(el: *mut lh_element_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_element_child_at(
        el: *mut lh_element_t,
        index: ::std::os::raw::c_int,
    ) -> *mut lh_element_t;
}
unsafe extern "C" {
    pub fn lh_element_is_text(el: *mut lh_element_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_element_get_font(el: *mut lh_element_t) -> usize;
}
unsafe extern "C" {
    pub fn lh_element_get_font_size(el: *mut lh_element_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_element_get_placement(el: *mut lh_element_t, pos: *mut lh_position_t);
}
unsafe extern "C" {
    pub fn lh_element_get_text(
        el: *mut lh_element_t,
        cb: ::std::option::Option<
            unsafe extern "C" fn(
                ctx: *mut ::std::os::raw::c_void,
                text: *const ::std::os::raw::c_char,
            ),
        >,
        ctx: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn lh_element_get_tag_name(
        el: *mut lh_element_t,
        cb: ::std::option::Option<
            unsafe extern "C" fn(
                ctx: *mut ::std::os::raw::c_void,
                name: *const ::std::os::raw::c_char,
            ),
        >,
        ctx: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn lh_element_get_attr(
        el: *mut lh_element_t,
        name: *const ::std::os::raw::c_char,
        cb: ::std::option::Option<
            unsafe extern "C" fn(
                ctx: *mut ::std::os::raw::c_void,
                value: *const ::std::os::raw::c_char,
            ),
        >,
        ctx: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_document_get_element_by_point(
        doc: *mut lh_document_t,
        x: f32,
        y: f32,
        client_x: f32,
        client_y: f32,
    ) -> *mut lh_element_t;
}
unsafe extern "C" {
    pub fn lh_element_get_inline_boxes_count(el: *mut lh_element_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_element_get_inline_box_at(
        el: *mut lh_element_t,
        index: ::std::os::raw::c_int,
        pos: *mut lh_position_t,
    );
}
pub type lh_inline_box_callback = ::std::option::Option<
    unsafe extern "C" fn(pos: *const lh_position_t, ctx: *mut ::std::os::raw::c_void),
>;
unsafe extern "C" {
    pub fn lh_element_get_inline_boxes(
        el: *mut lh_element_t,
        cb: lh_inline_box_callback,
        ctx: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn lh_element_select_one(
        el: *mut lh_element_t,
        selector: *const ::std::os::raw::c_char,
    ) -> *mut lh_element_t;
}
unsafe extern "C" {
    pub fn lh_element_get_text_align(el: *mut lh_element_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_element_get_line_height(el: *mut lh_element_t) -> f32;
}
unsafe extern "C" {
    pub fn lh_document_append_children_from_string(
        doc: *mut lh_document_t,
        parent: *mut lh_element_t,
        html: *const ::std::os::raw::c_char,
        replace_existing: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn lh_document_on_mouse_over(
        doc: *mut lh_document_t,
        x: f32,
        y: f32,
        client_x: f32,
        client_y: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_document_on_lbutton_down(
        doc: *mut lh_document_t,
        x: f32,
        y: f32,
        client_x: f32,
        client_y: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_document_on_lbutton_up(
        doc: *mut lh_document_t,
        x: f32,
        y: f32,
        client_x: f32,
        client_y: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_document_on_mouse_leave(doc: *mut lh_document_t) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn lh_document_media_changed(doc: *mut lh_document_t) -> ::std::os::raw::c_int;
}
